<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_help"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/helpInfo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/info1text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpIcon" />

        <TextView
            android:id="@+id/helpInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/noteText"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo1" />

        <TextView
            android:id="@+id/helpInfo4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/info2text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo" />

        <TextView
            android:id="@+id/helpInfo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/info3text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo4" />

        <TextView
            android:id="@+id/helpInfo5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/info4text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo2" />

        <TextView
            android:id="@+id/helpInfo6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/info5text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo5" />

        <TextView
            android:id="@+id/helpInfo7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/noteText2"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo6" />

        <TextView
            android:id="@+id/helpInfo3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/info6text"
            android:textAppearance="@style/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo7" />

        <ImageView
            android:id="@+id/helpIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/help_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097" />

        <ImageButton
            android:id="@+id/backButtonHelp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfo3"
            app:layout_constraintVertical_bias="0.946" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>